Fix for home links not refreshing page. CSS fix * Changed home links from '/boards' to '/'. '/' redirects to '/boards'   so this forces it to reload the page when you click home or the logo * Angular doesn't normally reload content if the url doesnt change when   using ng-href so this is one of the possible ways to solve this.   Another solution would be to add target="_self" to the link but this   would cause a full page reload, not a reload within angular. * Fix for collapse icons css. Added inline-block css property so   category titles dont shift while the font awesome icons load.

--- a/app/scss/epochtalk.scss
+++ b/app/scss/epochtalk.scss
@@ -83,7 +83,7 @@
   font-size: 14px;
   margin-top: 5px;
   margin-bottom: 5px; }
-.collapse-btn { position: relative; top: -3px; width: 15px; margin-right: 5px; font-size: 1em;}
+.collapse-btn { display:inline-block; position: relative; top: -3px; width: 15px; margin-right: 5px; font-size: 1em;}
 
 /* New Thread Page */
 .info-box { margin-bottom: 10px; }
